--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
       }
       #home-container {
         width: 92%;
-        min-width: 100vh;
+        min-height: 100vh;
         margin: 0 auto;
         border-radius: 10px;
         border: solid 1px black;
@@ -33,20 +33,28 @@
         background-color: #fff;
       }
       #home-slideshow {
-          width: 100%;
-          height: 500px;
+        width: 100%;
+        height: 500px;
       }
       #home-header-balk {
-          width: 100%;
-          height: 300px;
+        width: 70%;
+        height: 40px;
+        background-color: #95cb52;
+        font-weight: bold;
+      }
+      #home-main-content {
+        height: 800px;
+        width: 100%;
       }
     </style>
   </head>
   <body>
     <div id="home-container">
-      <div id="home-header"></div>
-      <div id="home-navigation"></div>
-      <div id="home-slideshow"></div>
+      <div id="home-header">LOGO & SHIT</div>
+      <div id="home-navigation">NAV & SHIT</div>
+      <div id="home-slideshow">SLIDESHOW & SHIT</div>
+      <div id="home-header-balk">HOME</div>
+      <div id="home-main-content">WAT BERICHTEN & SHIT</div>
     </div>
   </body>
 </html>
