--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         width: 92%;
         min-height: 100vh;
         margin: 0 auto;
-        border-radius: 10px;
+        border-radius: 10px 10px 0px 0px;
         border: solid 1px black;
       }
       #home-navigation {
@@ -38,13 +38,23 @@
       }
       #home-header-balk {
         width: 70%;
-        height: 40px;
+        height: 50px;
         background-color: #95cb52;
         font-weight: bold;
       }
       #home-main-content {
         height: 800px;
         width: 100%;
+      }
+      #home-footer {
+        width: 100%;
+        height: 300px;
+        background-color: #95cb52;
+      }
+      #home-copyright {
+        width: 100%;
+        height: 100px;
+        background-color: #3a3d41;
       }
     </style>
   </head>
@@ -55,6 +65,12 @@
       <div id="home-slideshow">SLIDESHOW & SHIT</div>
       <div id="home-header-balk">HOME</div>
       <div id="home-main-content">WAT BERICHTEN & SHIT</div>
+      <div id="home-footer">
+        “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
+      </div>
+      <div id="home-copyright">
+        Copyright © 2015 Kinderbalans Alle rechten voorbehouden.
+      </div>
     </div>
   </body>
 </html>
