--- a/home.html
+++ b/home.html
@@ -14,14 +14,15 @@
   </head>
   <body>
     <div class="home-container">
-      <div class="header">
-        <class id="logo"></class>
-        class#
+      <header class="header-distributed">
+        <header class="header-left"></class>
+        <header class="header-center"></class>
+        <header class="header-right"></class>
       </div>
-      <div class="home-navigation">NAV & SHIT</div>
 
       <!-- work in progress -->
 
+      <div class="home-navigation">NAV & SHIT</div>
       <div class="home-slideshow">SLIDESHOW & SHIT</div>
       <div class="home-header-balk">HOME</div>
       <div class="home-main-content">WAT BERICHTEN & SHIT</div>
