--- a/home.html
+++ b/home.html
@@ -13,25 +13,24 @@
     <style></style>
   </head>
   <body>
-    <div class="home-container">
+    <div class="container">
       <header class="header-distributed">
-        <header class="header-left"></class>
-        <header class="header-center"></class>
-        <header class="header-right"></class>
-      </div>
+        <header class="header-left"></header>
+        <header class="header-center"></header>
+        <header class="header-right"></header>
+      </header>
 
-      <!-- work in progress -->
+      <nav class="nav"></nav>
 
-      <div class="home-navigation">NAV & SHIT</div>
-      <div class="home-slideshow">SLIDESHOW & SHIT</div>
-      <div class="home-header-balk">HOME</div>
-      <div class="home-main-content">WAT BERICHTEN & SHIT</div>
-      <div class="home-footer">
-        “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
-      </div>
-      <div class="home-copyright">
-        Copyright © 2015 Kinderbalans Alle rechten voorbehouden.
-      </div>
+      <section class="images"></section>
+      <section class="balk"></section>
+      <section class="content"></section>
+
+      <footer class="footer-distrubuted">
+        <footer class="footer-left"></footer>
+        <footer class="footer-center"></footer>
+        <footer class="footer-right"></footer>
+      </footer>
     </div>
   </body>
 </html>
