--- a/home.html
+++ b/home.html
@@ -20,11 +20,24 @@
         <header class="header-right"></header>
       </header>
 
-      <nav class="nav"></nav>
+      <nav class="nav">
+        <ul>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </nav>
+      <!-- navigation -->
 
       <section class="images"></section>
+      <!-- slideshow -->
       <section class="balk"></section>
       <section class="content"></section>
+      <!-- main content -->
 
       <footer class="footer-distrubuted">
         <footer class="footer-left"></footer>
