--- a/home.html
+++ b/home.html
@@ -10,39 +10,98 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>HOME - Kinderbalans</title>
-    <style></style>
   </head>
   <body>
     <div class="container">
       <header class="header-distributed">
-        <header class="header-left"></header>
-        <header class="header-center"></header>
-        <header class="header-right"></header>
+        <header class="header-left">niks</header>
+        <header class="header-center">logo</header>
+        <header class="header-right">social media & shit</header>
       </header>
 
       <nav class="nav">
         <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a class="active" href="#">Home</a></li>
+          <li><a href="#">Bowen Therapie</a></li>
+          <li><a href="#">Klachten</a></li>
+          <li><a href="#">Over Mij</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Tarieven</a></li>
+          <li><a href="#">Engels</a></li>
+          <li><a href="#">Nieuws</a></li>
         </ul>
       </nav>
       <!-- navigation -->
 
       <section class="images"></section>
       <!-- slideshow -->
-      <section class="balk"></section>
-      <section class="content"></section>
-      <!-- main content -->
 
-      <footer class="footer-distrubuted">
-        <footer class="footer-left"></footer>
-        <footer class="footer-center"></footer>
-        <footer class="footer-right"></footer>
+      <section class="main-content">
+        <!-- main content -->
+        <section class="balk">
+          <h1>Home</h1>
+        </section>
+        <section class="site-content">
+          <p>
+            Bowen therapie voor baby’s en jonge kinderen – Den Haag
+          </p>
+          <p>
+            Heeft je zoon of dochter (0-12 jr) spanningsklachten, pijn of vage
+            lichamelijke klachten (ook wel psychosomatische klachten of SOLK
+            genoemd)? Bij Kinderbalans is je kind op een fijne plek waar met de
+            milde, kindvriendelijke Bowen therapie spanning in het hoofd en lijf
+            wordt behandeld. Kinderen komen bij Kinderbalans met buikpijn,
+            onrust in lijf of hoofd, hoofdpijn, koliekpijn (baby’s),
+            slaapproblemen en spanning in de nek/schouders/rug.
+          </p>
+          <p>
+            De behandelingen worden door de meeste aanvullende verzekeringen
+            deels vergoed.
+          </p>
+          <p>
+            <img
+              src="assets/images/willemijn_hornsveld.jpeg"
+              alt="willemijn_hornsveld"
+              style="box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); width: 250px; height: 250px;"
+            />
+          </p>
+          <span>
+            Willemijn Hornsveld
+            <p class="none">Bowen therapeut,</p>
+          </span>
+
+          <!-- testimonials https://mdbootstrap.com/docs/jquery/sections/testimonials/ -->
+          <section class="testimonials">
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+          </section>
+        </section>
+      </section>
+
+      <footer class="footer-distributed">
+        <footer class="footer-left">
+          “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
+        </footer>
+        <footer class="footer-center">LINKS</footer>
+        <footer class="footer-right">
+          DE PRAKTIJK Johan van Oldenbarneveltlaan 2, 2582 NN Den Haag Telefoon:
+          070-2202009 E-mail: info@kinderbalans.nl Bel of mail vrijblijvend voor
+          meer informatie! De openingstijden zijn: Woensdag: 08:00-18:00
+          Donderdag: 09:00-19:00
+        </footer>
+        <footer class="footer-copyright">
+          <footer class="footer-copyright-left">
+            Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
+          </footer>
+        </footer>
       </footer>
     </div>
   </body>
