--- a/bowentherapie.html
+++ b/bowentherapie.html
@@ -14,12 +14,34 @@
   <body>
     <div class="container">
       <header class="header-distributed">
-        <header class="header-left">niks</header>
-        <header class="header-center">logo</header>
-        <header class="header-right">social media & shit</header>
+        <header class="header-left"></header>
+
+        <header class="header-center">
+          <header class="header-logo">
+            <img
+              src="assets/images/kinder_balans_logo.jpg"
+              alt="kinder_balans_logo"
+              style="height: 180px; width: 320px;"
+            />
+          </header>
+        </header>
+
+        <header class="header-right">
+          <header class="header-icons">
+            <i class="fa fa-facebook-square"></i>
+            <i class="fa fa-twitter-square"></i>
+            <i class="fa fa-linkedin-square"></i>
+            <i class="fa fa-youtube-square"></i>
+            <i class="fa fa-phone-square"></i>
+            <header class="header-search">
+              <!-- w.i.p -->
+              search
+            </header>
+          </header>
+        </header>
       </header>
 
-      <nav class="nav">
+      <nav class="navigation">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a class="active" href="#">Bowen Therapie</a></li>
@@ -35,7 +57,7 @@
 
       <section class="main-content">
         <!-- main content -->
-        <section class="balk">
+        <section class="content-title">
           <h1>Bowen Therapie</h1>
         </section>
         <section class="site-content">
@@ -82,25 +104,53 @@
           </p>
           <p>
             Bowen werkt zacht en subtiel waardoor het geschikt is voor iedereen,
-            ongeacht de klacht, de leeftijd en de conditie. Tijdens de
-            behandeling krijgt je lichaam pauzes van enkele minuten. Zo krijgt
-            het lichaam de tijd en ruimte om de impulsen te verwerken. Omdat de
-            bewegingen zacht en pijnloos zijn, is de techniek geschikt voor
-            iedereen, ook voor baby’s.
+            ongeacht de klacht, de leeftijd en de conditie.
+          </p>
+
+          <p>
+            Tijdens de behandeling krijgt je lichaam pauzes van enkele minuten.
+            Zo krijgt het lichaam de tijd en ruimte om de impulsen te verwerken.
+          </p>
+
+          <p>
+            Omdat de bewegingen zacht en pijnloos zijn, is de techniek geschikt
+            voor iedereen, ook voor baby’s.
           </p>
         </section>
       </section>
 
       <footer class="footer-distributed">
-        <footer class="footer-left">
-          “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
-        </footer>
-        <footer class="footer-center">LINKS</footer>
-        <footer class="footer-right">
-          DE PRAKTIJK Johan van Oldenbarneveltlaan 2, 2582 NN Den Haag Telefoon:
-          070-2202009 E-mail: info@kinderbalans.nl Bel of mail vrijblijvend voor
-          meer informatie! De openingstijden zijn: Woensdag: 08:00-18:00
-          Donderdag: 09:00-19:00
+        <footer class="footer-distributed-position">
+          <footer class="footer-left">
+            <h1>
+              “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
+            </h1>
+          </footer>
+          <footer class="footer-center">
+            <h1>LINKS</h1>
+            <ul>
+              <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
+              <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
+              <li><a href="https://vbag.nl/">VBAG</a></li>
+            </ul>
+          </footer>
+          <footer class="footer-right">
+            <h1>DE PRAKTIJK</h1>
+            <span>
+              <p>Johan van Oldenbarneveltlaan 2, 2582 NN Den Haag</p>
+              <p>Telefoon: 070-2202009</p>
+              <p>E-mail: info@kinderbalans.nl</p>
+              <p>Bel of mail vrijblijvend voor meer informatie!</p>
+              <span>De openingstijden zijn:</span>
+            </span>
+            <p>
+              &nbsp;
+            </p>
+            <p>
+              <span>Woensdag: <span>08:00-18:00</span></span>
+              <span>Donderdag: <span>09:00-19:00</span></span>
+            </p>
+          </footer>
         </footer>
         <footer class="footer-copyright">
           <footer class="footer-copyright-left">
