over mij update v1 (layout finished)

--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
           </p>
           <p>
             <img
-              src="assets/images/willemijn_hornsveld.jpeg"
+              src="assets/images/willemijn_hornsveld.jpg"
               alt="willemijn_hornsveld"
               style="box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); width: 250px; height: 250px;"
             />
