--- a/klachten.html
+++ b/klachten.html
@@ -80,13 +80,13 @@
             Als je twijfelt of ik je kind kan helpen, neem dan vrijblijvend
             contact met me op voor advies.
           </p>
-          <p class=klachten>
+          <p class="klachten">
             <img
               src="assets/images/klachten.jpg"
+              alt="klachten"
               style="width: 300px; height: 200px; float: right;"
             />
           </p>
-          
         </section>
       </section>
 
