contact + tarieven (layout finished)

--- a/overmij.html
+++ b/overmij.html
@@ -43,12 +43,12 @@
 
       <nav class="navigation">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Bowen Therapie</a></li>
-          <li><a href="#">Klachten</a></li>
-          <li><a class="active" href="#">Over Mij</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Tarieven</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="bowentherapie.html">Bowen Therapie</a></li>
+          <li><a href="klachten.html">Klachten</a></li>
+          <li><a class="active" href="overmij.html">Over Mij</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="tarieven.html">Tarieven</a></li>
           <li><a href="#">Engels</a></li>
           <li><a href="#">Nieuws</a></li>
         </ul>
