--- a/bowentherapie.html
+++ b/bowentherapie.html
@@ -44,13 +44,14 @@
       <nav class="navigation">
         <ul>
           <li><a href="home.html">Home</a></li>
-          <li><a class="active" href="bowentherapie.html">Bowen Therapie</a></li>
+          <li><a href="nieuws.html">Nieuws</a></li>
+          <li>
+            <a class="active" href="bowentherapie.html">Bowen Therapie</a>
+          </li>
           <li><a href="klachten.html">Klachten</a></li>
           <li><a href="overmij.html">Over Mij</a></li>
-          <li><a href="contact.html">Contact</a></li>
           <li><a href="tarieven.html">Tarieven</a></li>
-          <li><a href="#">Engels</a></li>
-          <li><a href="#">Nieuws</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <!-- navigation -->
