--- a/nieuws.html
+++ b/nieuws.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>HOME - Kinderbalans</title>
+    <title>BOWEN THERAPIE - Kinderbalans</title>
   </head>
   <body>
     <div class="container">
@@ -43,8 +43,8 @@
 
       <nav class="navigation">
         <ul>
-          <li><a class="active" href="home.html">Home</a></li>
-          <li><a href="nieuws.html">Nieuws</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a class="active" href="nieuws.html">Nieuws</a></li>
           <li><a href="bowentherapie.html">Bowen Therapie</a></li>
           <li><a href="klachten.html">Klachten</a></li>
           <li><a href="overmij.html">Over Mij</a></li>
@@ -54,56 +54,14 @@
       </nav>
       <!-- navigation -->
 
-      <section class="slider"></section>
-      <!-- slideshow -->
-
       <section class="main-content">
         <!-- main content -->
         <section class="content-title">
-          <h1>Home</h1>
+          <h1>Nieuws</h1>
         </section>
         <section class="site-content">
-          <p>
-            Bowen therapie voor baby’s en jonge kinderen – Den Haag
-          </p>
-          <p>
-            Heeft je zoon of dochter (0-12 jr) spanningsklachten, pijn of vage
-            lichamelijke klachten (ook wel psychosomatische klachten of SOLK
-            genoemd)? Bij Kinderbalans is je kind op een fijne plek waar met de
-            milde, kindvriendelijke Bowen therapie spanning in het hoofd en lijf
-            wordt behandeld. Kinderen komen bij Kinderbalans met buikpijn,
-            onrust in lijf of hoofd, hoofdpijn, koliekpijn (baby’s),
-            slaapproblemen en spanning in de nek/schouders/rug.
-          </p>
-          <p>
-            De behandelingen worden door de meeste aanvullende verzekeringen
-            deels vergoed.
-          </p>
-          <p>
-            <img
-              src="assets/images/willemijn_hornsveld.jpg"
-              alt="willemijn_hornsveld"
-              style="box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); width: 250px; height: 250px;"
-            />
-          </p>
-          <span>
-            Willemijn Hornsveld
-            <p class="none">Bowen therapeut,</p>
-          </span>
-
-          <!-- testimonials https://mdbootstrap.com/docs/jquery/sections/testimonials/ -->
-          <section class="testimonials">
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-          </section>
+          nieuws etc.
+          <!-- insert nieuws -->
         </section>
       </section>
 
