--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
             </span>
           </p>
           <p style="margin-bottom: 50px;">
-            <strong>contact form niet nog af</strong>
+            <strong>contact form nog niet af</strong>
             <!-- w.i.p -->
           </p>
           <p style="margin-bottom: 50px;">
