--- a/klachten.html
+++ b/klachten.html
@@ -88,7 +88,6 @@
           </p>
         </section>
       </section>
-
       <footer class="footer-distributed">
         <footer class="footer-distributed-position">
           <footer class="footer-left">
@@ -117,7 +116,9 @@
               &nbsp;
             </p>
             <p>
-              <span>Woensdag: <span>08:00-18:00</span></span>
+              <span
+                >Woensdag:<span><span>08:00-18:00</span></span></span
+              >
               <span>Donderdag: <span>09:00-19:00</span></span>
             </p>
           </footer>
