--- a/tarieven.html
+++ b/tarieven.html
@@ -80,7 +80,6 @@
           <p>Een afspraak annuleren kan kosteloos als je dat minimaal 48 uur ervoor doet. Bel/mail je later of niet, dan breng ik € 25,- in rekening voor de gereserveerde tijd.</p>
         </section>
       </section>
-
       <footer class="footer-distributed">
         <footer class="footer-distributed-position">
           <footer class="footer-left">
@@ -109,7 +108,9 @@
               &nbsp;
             </p>
             <p>
-              <span>Woensdag: <span>08:00-18:00</span></span>
+              <span
+                >Woensdag:<span><span>08:00-18:00</span></span></span
+              >
               <span>Donderdag: <span>09:00-19:00</span></span>
             </p>
           </footer>
