--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,9 @@
               &nbsp;
             </p>
             <p>
-              <span>Woensdag: <span>08:00-18:00</span></span>
+              <span
+                >Woensdag:<span><span>08:00-18:00</span></span></span
+              >
               <span>Donderdag: <span>09:00-19:00</span></span>
             </p>
           </footer>
