--- a/nieuws.html
+++ b/nieuws.html
@@ -64,7 +64,6 @@
           <!-- insert nieuws -->
         </section>
       </section>
-
       <footer class="footer-distributed">
         <footer class="footer-distributed-position">
           <footer class="footer-left">
@@ -93,7 +92,9 @@
               &nbsp;
             </p>
             <p>
-              <span>Woensdag: <span>08:00-18:00</span></span>
+              <span
+                >Woensdag:<span><span>08:00-18:00</span></span></span
+              >
               <span>Donderdag: <span>09:00-19:00</span></span>
             </p>
           </footer>
