--- a/home.html
+++ b/home.html
@@ -93,16 +93,36 @@
 
           <!-- testimonials https://mdbootstrap.com/docs/jquery/sections/testimonials/ -->
           <section class="testimonials">
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
-            testimonialstestimonialstestimonialstestimonialstestimonialstestimonialstestimonials
+            <div class="col">
+              <div class="bg-col">
+                <div class="picture">
+                  <img
+                    src="assets/images/willemijn_hornsveld.jpg"
+                    style="height: 100px; width: 100px; border-radius: 50%;"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="bg-col">
+                <div class="picture">
+                  <img
+                    src="assets/images/willemijn_hornsveld.jpg"
+                    style="height: 100px; width: 100px; border-radius: 50%;"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="bg-col">
+                <div class="picture">
+                  <img
+                    src="assets/images/willemijn_hornsveld.jpg"
+                    style="height: 100px; width: 100px; border-radius: 50%;"
+                  />
+                </div>
+              </div>
+            </div>
           </section>
         </section>
       </section>
