--- a/home.html
+++ b/home.html
@@ -101,15 +101,11 @@
                     style="height: 100px; width: 100px; border-radius: 50%;"
                   />
                 </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="bg-col">
-                <div class="picture">
-                  <img
-                    src="assets/images/willemijn_hornsveld.jpg"
-                    style="height: 100px; width: 100px; border-radius: 50%;"
-                  />
+                <div class="col-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
+                  incidunt maxime iste eligendi temporibus quidem, voluptates
+                  eveniet eaque deleniti cupiditate soluta dicta error
+                  necessitatibus esse accusamus ipsam saepe quia assumenda!
                 </div>
               </div>
             </div>
@@ -120,6 +116,28 @@
                     src="assets/images/willemijn_hornsveld.jpg"
                     style="height: 100px; width: 100px; border-radius: 50%;"
                   />
+                </div>
+                <div class="col-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Inventore omnis totam officiis voluptatem, molestias repellat
+                  ipsa veniam tempore labore unde consequatur laborum! Beatae
+                  facere quos deserunt voluptate doloribus sequi delectus.
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="bg-col">
+                <div class="picture">
+                  <img
+                    src="assets/images/willemijn_hornsveld.jpg"
+                    style="height: 100px; width: 100px; border-radius: 50%;"
+                  />
+                </div>
+                <div class="col-text">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Accusamus aperiam, perferendis porro sed tempore dolorum,
+                  nobis debitis et blanditiis, corporis saepe rem enim velit
+                  tenetur soluta! Cum suscipit voluptatibus repudiandae.
                 </div>
               </div>
             </div>
