--- a/home.html
+++ b/home.html
@@ -102,10 +102,10 @@
                   />
                 </div>
                 <div class="col-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim
-                  incidunt maxime iste eligendi temporibus quidem, voluptates
-                  eveniet eaque deleniti cupiditate soluta dicta error
-                  necessitatibus esse accusamus ipsam saepe quia assumenda!
+                  Aron Aron
+                  <div class="col-line">
+                    <hr />
+                  </div>
                 </div>
               </div>
             </div>
@@ -118,10 +118,10 @@
                   />
                 </div>
                 <div class="col-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Inventore omnis totam officiis voluptatem, molestias repellat
-                  ipsa veniam tempore labore unde consequatur laborum! Beatae
-                  facere quos deserunt voluptate doloribus sequi delectus.
+                  Aron Aron
+                  <div class="col-line">
+                    <hr />
+                  </div>
                 </div>
               </div>
             </div>
@@ -134,10 +134,10 @@
                   />
                 </div>
                 <div class="col-text">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Accusamus aperiam, perferendis porro sed tempore dolorum,
-                  nobis debitis et blanditiis, corporis saepe rem enim velit
-                  tenetur soluta! Cum suscipit voluptatibus repudiandae.
+                  Aron Aron
+                  <div class="col-line">
+                    <hr />
+                  </div>
                 </div>
               </div>
             </div>
