--- a/home.html
+++ b/home.html
@@ -101,10 +101,13 @@
                     style="height: 100px; width: 100px; border-radius: 50%;"
                   />
                 </div>
-                <div class="col-text">
+                <div class="col-name">
                   Aron Aron
                   <div class="col-line">
                     <hr />
+                  </div>
+                  <div class="col-text">
+                    Hallo ik ben Aron.
                   </div>
                 </div>
               </div>
@@ -117,10 +120,13 @@
                     style="height: 100px; width: 100px; border-radius: 50%;"
                   />
                 </div>
-                <div class="col-text">
+                <div class="col-name">
                   Aron Aron
                   <div class="col-line">
                     <hr />
+                  </div>
+                  <div class="col-text">
+                    Hallo ik ben Aron.
                   </div>
                 </div>
               </div>
@@ -133,10 +139,13 @@
                     style="height: 100px; width: 100px; border-radius: 50%;"
                   />
                 </div>
-                <div class="col-text">
+                <div class="col-name">
                   Aron Aron
                   <div class="col-line">
                     <hr />
+                  </div>
+                  <div class="col-text">
+                    Hallo ik ben Aron.
                   </div>
                 </div>
               </div>
