--- a/home.html
+++ b/home.html
@@ -93,12 +93,15 @@
 
           <!-- testimonials https://mdbootstrap.com/docs/jquery/sections/testimonials/ -->
           <section class="testimonials">
+            <section class="content-title">
+              <h1>Testimonials</h1>
+            </section>
             <div class="col">
-              <div class="bg-col">
-                <div class="picture">
+              <div class="col-bg">
+                <div class="col-picture">
                   <img
                     src="assets/images/willemijn_hornsveld.jpg"
-                    style="height: 100px; width: 100px; border-radius: 50%;"
+                    style="height: 110px; width: 110px; border-radius: 50%;"
                   />
                 </div>
                 <div class="col-name">
@@ -113,11 +116,11 @@
               </div>
             </div>
             <div class="col">
-              <div class="bg-col">
-                <div class="picture">
+              <div class="col-bg">
+                <div class="col-picture">
                   <img
                     src="assets/images/willemijn_hornsveld.jpg"
-                    style="height: 100px; width: 100px; border-radius: 50%;"
+                    style="height: 110px; width: 110px; border-radius: 50%;"
                   />
                 </div>
                 <div class="col-name">
@@ -131,12 +134,12 @@
                 </div>
               </div>
             </div>
-            <div class="col">
-              <div class="bg-col">
-                <div class="picture">
+            <div class="col-none">
+              <div class="col-bg">
+                <div class="col-picture">
                   <img
                     src="assets/images/willemijn_hornsveld.jpg"
-                    style="height: 100px; width: 100px; border-radius: 50%;"
+                    style="height: 110px; width: 110px; border-radius: 50%;"
                   />
                 </div>
                 <div class="col-name">
