--- a/home.html
+++ b/home.html
@@ -1,203 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="style.css" />
     <title>HOME - Kinderbalans</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <header class="header-distributed">
-        <header class="header-left"></header>
+        <header class="header-distributed">
+            <header class="header-left"></header>
 
-        <header class="header-center">
-          <header class="header-logo">
-            <img
-              src="assets/images/kinder_balans_logo.jpg"
-              alt="kinder_balans_logo"
-              style="height: 180px; width: 320px;"
-            />
-          </header>
-        </header>
-
-        <header class="header-right">
-          <header class="header-icons">
-            <i class="fa fa-facebook-square"></i>
-            <i class="fa fa-twitter-square"></i>
-            <i class="fa fa-linkedin-square"></i>
-            <i class="fa fa-youtube-square"></i>
-            <i class="fa fa-phone-square"></i>
-            <header class="header-search">
-              <!-- w.i.p -->
-              search
+            <header class="header-center">
+                <header class="header-logo">
+                    <img src="assets/images/kinder_balans_logo.jpg" alt="kinder_balans_logo" style="height: 180px; width: 320px;" />
+                </header>
             </header>
-          </header>
+
+            <header class="header-right">
+                <header class="header-icons">
+                    <i class="fa fa-facebook-square"></i>
+                    <i class="fa fa-twitter-square"></i>
+                    <i class="fa fa-linkedin-square"></i>
+                    <i class="fa fa-youtube-square"></i>
+                    <i class="fa fa-phone-square"></i>
+                    <header class="header-search">
+                        <!-- w.i.p -->
+                        search
+                    </header>
+                </header>
+            </header>
         </header>
-      </header>
 
-      <nav class="navigation">
-        <ul>
-          <li><a class="active" href="home.html">Home</a></li>
-          <li><a href="nieuws.html">Nieuws</a></li>
-          <li><a href="bowentherapie.html">Bowen Therapie</a></li>
-          <li><a href="klachten.html">Klachten</a></li>
-          <li><a href="overmij.html">Over Mij</a></li>
-          <li><a href="tarieven.html">Tarieven</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-      <!-- navigation -->
+        <nav class="navigation">
+            <ul>
+                <li><a class="active" href="home.html">Home</a></li>
+                <li><a href="nieuws.html">Nieuws</a></li>
+                <li><a href="bowentherapie.html">Bowen Therapie</a></li>
+                <li><a href="klachten.html">Klachten</a></li>
+                <li><a href="overmij.html">Over Mij</a></li>
+                <li><a href="tarieven.html">Tarieven</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <!-- navigation -->
 
-      <section class="slider"></section>
-      <!-- slideshow -->
+        <section class="slider"></section>
+        <!-- slideshow -->
 
-      <section class="main-content">
-        <!-- main content -->
-        <section class="content-title">
-          <h1>Home</h1>
-        </section>
-        <section class="site-content">
-          <p>
-            Bowen therapie voor baby’s en jonge kinderen – Den Haag
-          </p>
-          <p>
-            Heeft je zoon of dochter (0-12 jr) spanningsklachten, pijn of vage
-            lichamelijke klachten (ook wel psychosomatische klachten of SOLK
-            genoemd)? Bij Kinderbalans is je kind op een fijne plek waar met de
-            milde, kindvriendelijke Bowen therapie spanning in het hoofd en lijf
-            wordt behandeld. Kinderen komen bij Kinderbalans met buikpijn,
-            onrust in lijf of hoofd, hoofdpijn, koliekpijn (baby’s),
-            slaapproblemen en spanning in de nek/schouders/rug.
-          </p>
-          <p>
-            De behandelingen worden door de meeste aanvullende verzekeringen
-            deels vergoed.
-          </p>
-          <p>
-            <img
-              src="assets/images/willemijn_hornsveld.jpg"
-              alt="willemijn_hornsveld"
-              style="box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); width: 250px; height: 250px;"
-            />
-          </p>
-          <span>
+        <section class="main-content">
+            <!-- main content -->
+            <section class="content-title">
+                <h1>Home</h1>
+            </section>
+            <section class="site-content">
+                <p>
+                    Bowen therapie voor baby’s en jonge kinderen – Den Haag
+                </p>
+                <p>
+                    Heeft je zoon of dochter (0-12 jr) spanningsklachten, pijn of vage lichamelijke klachten (ook wel psychosomatische klachten of SOLK genoemd)? Bij Kinderbalans is je kind op een fijne plek waar met de milde, kindvriendelijke Bowen therapie spanning in
+                    het hoofd en lijf wordt behandeld. Kinderen komen bij Kinderbalans met buikpijn, onrust in lijf of hoofd, hoofdpijn, koliekpijn (baby’s), slaapproblemen en spanning in de nek/schouders/rug.
+                </p>
+                <p>
+                    De behandelingen worden door de meeste aanvullende verzekeringen deels vergoed.
+                </p>
+                <p>
+                    <img src="assets/images/willemijn_hornsveld.jpg" alt="willemijn_hornsveld" style="box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2); width: 250px; height: 250px;" />
+                </p>
+                <span>
             Willemijn Hornsveld
             <p class="none">Bowen therapeut,</p>
           </span>
 
-          <!-- testimonials https://mdbootstrap.com/docs/jquery/sections/testimonials/ -->
-          <section class="testimonials">
-            <section class="content-title">
-              <h1>Testimonials</h1>
+                <!-- testimonials https://mdbootstrap.com/docs/jquery/sections/testimonials/ -->
+                <section class="testimonials">
+                    <section class="content-title">
+                        <h1>Testimonials</h1>
+                    </section>
+                    <div class="col">
+                        <div class="col-bg">
+                            <div class="col-picture">
+                                <img src="assets/images/willemijn_hornsveld.jpg" style="height: 110px; width: 110px; border-radius: 50%;" />
+                            </div>
+                            <div class="col-name">
+                                Aron Aron
+                                <div class="col-line">
+                                    <hr />
+                                </div>
+                                <div class="col-text">
+                                    Hallo ik ben Aron.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="col-bg">
+                            <div class="col-picture">
+                                <img src="assets/images/willemijn_hornsveld.jpg" style="height: 110px; width: 110px; border-radius: 50%;" />
+                            </div>
+                            <div class="col-name">
+                                Aron Aron
+                                <div class="col-line">
+                                    <hr />
+                                </div>
+                                <div class="col-text">
+                                    Hallo ik ben Aron.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-none">
+                        <div class="col-bg">
+                            <div class="col-picture">
+                                <img src="assets/images/willemijn_hornsveld.jpg" style="height: 110px; width: 110px; border-radius: 50%;" />
+                            </div>
+                            <div class="col-name">
+                                Aron Aron
+                                <div class="col-line">
+                                    <hr />
+                                </div>
+                                <div class="col-text">
+                                    Hallo ik ben Aron.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </section>
-            <div class="col">
-              <div class="col-bg">
-                <div class="col-picture">
-                  <img
-                    src="assets/images/willemijn_hornsveld.jpg"
-                    style="height: 110px; width: 110px; border-radius: 50%;"
-                  />
-                </div>
-                <div class="col-name">
-                  Aron Aron
-                  <div class="col-line">
-                    <hr />
-                  </div>
-                  <div class="col-text">
-                    Hallo ik ben Aron.
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="col-bg">
-                <div class="col-picture">
-                  <img
-                    src="assets/images/willemijn_hornsveld.jpg"
-                    style="height: 110px; width: 110px; border-radius: 50%;"
-                  />
-                </div>
-                <div class="col-name">
-                  Aron Aron
-                  <div class="col-line">
-                    <hr />
-                  </div>
-                  <div class="col-text">
-                    Hallo ik ben Aron.
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-none">
-              <div class="col-bg">
-                <div class="col-picture">
-                  <img
-                    src="assets/images/willemijn_hornsveld.jpg"
-                    style="height: 110px; width: 110px; border-radius: 50%;"
-                  />
-                </div>
-                <div class="col-name">
-                  Aron Aron
-                  <div class="col-line">
-                    <hr />
-                  </div>
-                  <div class="col-text">
-                    Hallo ik ben Aron.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
         </section>
-      </section>
 
-      <footer class="footer-distributed">
-        <footer class="footer-distributed-position">
-          <footer class="footer-left">
-            <h1>
-              “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
-            </h1>
-          </footer>
-          <footer class="footer-center">
-            <h1>LINKS</h1>
-            <ul>
-              <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
-              <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
-              <li><a href="https://vbag.nl/">VBAG</a></li>
-            </ul>
-          </footer>
-          <footer class="footer-right">
-            <h1>DE PRAKTIJK</h1>
-            <span>
+        <footer class="footer-distributed">
+            <footer class="footer-distributed-position">
+                <footer class="footer-left">
+                    <h1>
+                        “IEDER KIND HEEFT HET RECHT OM ONTSPANNEN OP TE GROEIEN”
+                    </h1>
+                </footer>
+                <footer class="footer-center">
+                    <h1>LINKS</h1>
+                    <ul>
+                        <li><a href="https://www.bowned.nl/">Bowen Nederland</a></li>
+                        <li><a href="https://www.emdr-therapeuten.nl/">EMDR</a></li>
+                        <li><a href="https://vbag.nl/">VBAG</a></li>
+                    </ul>
+                </footer>
+                <footer class="footer-right">
+                    <h1>DE PRAKTIJK</h1>
+                    <span>
               <p>Johan van Oldenbarneveltlaan 2, 2582 NN Den Haag</p>
               <p>Telefoon: 070-2202009</p>
               <p>E-mail: info@kinderbalans.nl</p>
               <p>Bel of mail vrijblijvend voor meer informatie!</p>
               <span>De openingstijden zijn:</span>
-            </span>
-            <p>
-              &nbsp;
-            </p>
-            <p>
-              <span
-                >Woensdag:<span><span>08:00-18:00</span></span></span
-              >
-              <span>Donderdag: <span>09:00-19:00</span></span>
-            </p>
-          </footer>
+                    </span>
+                    <p>
+                        &nbsp;
+                    </p>
+                    <p>
+                        <span>Woensdag:<span><span>08:00-18:00</span></span>
+                        </span>
+                        <span>Donderdag: <span>09:00-19:00</span></span>
+                    </p>
+                </footer>
+            </footer>
+            <footer class="footer-copyright">
+                <footer class="footer-copyright-left">
+                    Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
+                </footer>
+            </footer>
         </footer>
-        <footer class="footer-copyright">
-          <footer class="footer-copyright-left">
-            Copyright © 2020 Kinderbalans Alle rechten voorbehouden.
-          </footer>
-        </footer>
-      </footer>
     </div>
-  </body>
+</body>
+
 </html>
