--- a/home.html
+++ b/home.html
@@ -54,7 +54,13 @@
       </nav>
       <!-- navigation -->
 
-      <section class="slider"></section>
+      <section class="slider">
+        <img
+          src="assets/images/pand.jpg"
+          style="width: 100%;
+        height: 450px;"
+        />
+      </section>
       <!-- slideshow -->
 
       <section class="main-content">
