--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
 
       <section class="slider">
         <img
-          src="assets/images/pand.jpg"
+          src="assets/images/placeholder.jpg"
           style="width: 100%;
         height: 450px;"
         />
