--- a/home.html
+++ b/home.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
     <link rel="stylesheet" href="style.css" />
     <title>HOME - Kinderbalans</title>
   </head>
@@ -27,19 +23,7 @@
           </header>
         </header>
 
-        <header class="header-right">
-          <header class="header-icons">
-            <i class="fa fa-facebook-square"></i>
-            <i class="fa fa-twitter-square"></i>
-            <i class="fa fa-linkedin-square"></i>
-            <i class="fa fa-youtube-square"></i>
-            <i class="fa fa-phone-square"></i>
-            <header class="header-search">
-              <!-- w.i.p -->
-              search
-            </header>
-          </header>
-        </header>
+        <header class="header-right"></header>
       </header>
 
       <nav class="navigation">
@@ -208,3 +192,10 @@
     </div>
   </body>
 </html>
+
+<!-- search bar in navigation
+icons in footer
+footer re design
+add: openings tijden.
+remove: links. -->
+
