--- a/home.html
+++ b/home.html
@@ -23,7 +23,13 @@
           </header>
         </header>
 
-        <header class="header-right"></header>
+        <header class="header-right">
+          <i class="fa fa-facebook"></i>
+          <i class="fa fa-twitter"></i>
+          <i class="fa fa-linkedin"></i>
+          <i class="fa fa-youtube"></i>
+          <i class="fa fa-phone"></i>
+        </header>
       </header>
 
       <nav class="navigation">
@@ -198,4 +204,3 @@ icons in footer
 footer re design
 add: openings tijden.
 remove: links. -->
-
