--- a/home.html
+++ b/home.html
@@ -23,13 +23,7 @@
           </header>
         </header>
 
-        <header class="header-right">
-          <i class="fa fa-facebook"></i>
-          <i class="fa fa-twitter"></i>
-          <i class="fa fa-linkedin"></i>
-          <i class="fa fa-youtube"></i>
-          <i class="fa fa-phone"></i>
-        </header>
+        <header class="header-right"></header>
       </header>
 
       <nav class="navigation">
